# cursor-cost-dashboard

./: .gitignore  README.md  pyproject.toml
src/cursor_cost_dashboard/: __init__.py  cli.py  config.py  data.py  palettes.py  plots.py
