[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "cursor-cost-dashboard"
version = "0.1.0"
description = "Reusable plots for Cursor cost CSV exports"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "matplotlib==3.10.8",
  "pandas==3.0.2",
  "rich==15.0.0",
  "seaborn==0.13.2",
]

[project.scripts]
cursor-cost-dashboard = "cursor_cost_dashboard.cli:main"
